--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -4,8 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>auth</artifactId>
+    <artifactId>gateway</artifactId>
     <version>1.0-SNAPSHOT</version>
+
 
     <parent>
         <groupId>cn.wjq.myweb</groupId>
@@ -14,17 +15,16 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <packaging>jar</packaging>
+
+
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -35,4 +35,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
