--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>application</module>
+        <module>producer</module>
         <module>auth</module>
+        <module>gateway</module>
+        <module>consumer</module>
     </modules>
 
 
@@ -20,9 +22,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
-        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-        <mysql.version>5.1.46</mysql.version>
+        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+        <alibaba-cloud.version>2.2.1.RELEASE</alibaba-cloud.version>
+        <mysql.version>8.0.20</mysql.version>
         <mybatis.version>1.3.2</mybatis.version>
         <lombok.version>1.16.18</lombok.version>
     </properties>
@@ -38,6 +41,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${alibaba-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- 定义 spring boot 版本 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -64,6 +76,7 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
